# NIR

./: .gitignore  pyproject.toml
datasets/: fakeAddresses_unique.txt
owasp_ml/: build_token_datasets.py  code_risk_report.txt  eval_all_datasets.py  token_risk_dataset.csv  token_risk_report.txt  tx_scam_report.txt
owasp_ml/eval/: __init__.py  eval_code_dataset.py  eval_token_dataset.py  eval_tx_dataset.py
owasp_ml/prep/: token_risk_dataset.csv  tools_ux_dataset.csv
owasp_ml/reports/: owasp_owasp_ml_full_report.txt
