[project]
name = "owasp-ml"
version = "0.1.0"
description = "OWASP attacks text and network datasets preprocessing and ML experiments"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "python-docx>=1.2.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


